Bug 349852 - Sieve doesn't connect to Sieve server when using a Sieve server address different from IMAP server
Summary: Sieve doesn't connect to Sieve server when using a Sieve server address diffe...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.14.7
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-03 08:29 UTC by Steffen Lehmann
Modified: 2015-07-03 21:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08
Sentry Crash Report:


Attachments
attachment-27412-0.html (4.74 KB, text/html)
2015-07-03 11:42 UTC, Steffen Lehmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steffen Lehmann 2015-07-03 08:29:29 UTC
No connection attempt will be made to Sieve server when using a Sieve server address different from IMAP server.

Reproducible: Always

Steps to Reproduce:
1. Configure an IMAP access (STARTTLS, DIGEST-MD5 or CRAM-MD5)
2. Configure "The server supportes Sieve"
3. Configure an alternative address for the ManageSieve server, different from the IMAP server address. This ManageSieve server  servers uses a certificate which is signed by an unknown cert authority.
4. Configure "Authentication using IMAP login and password" and save configuration.
5. Open the "Manage Sieve scripts" dialogue


Actual Results:  
No connection attempt will be made to the ManageSieve server

Expected Results:  
The ManageSieve server will be connected, the login procedure succeeds with both, CRAM-MD5 and DIGEST-MD5, authentication methods.

Maybe it happens after a failed login to ManageSieve made earlier (using CRAM-MD5/DIGEST/MD5)
Maybe it happens after a TLS certificate check failed once (but was accepted, I'm using my own self-signed certificate where the certificate name doesn't match the server name)
In order to investigate this problem, I can provide you with a test account.
I'm using KMail version 4.14.9 (unfortunately, this version is not selectable in the "version" selection box, see above).
Comment 1 Laurent Montel 2015-07-03 09:42:42 UTC
Oh thanks for provide an test account
Send me all info in montel@kde.org
i will investigate it.
(give me all info how to configurate it thanks)
Comment 2 Steffen Lehmann 2015-07-03 11:42:15 UTC
Created attachment 93469 [details]
attachment-27412-0.html

Am Freitag, 3. Juli 2015, 09:42:42 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=349852
> 
> Laurent Montel <montel@kde.org> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |montel@kde.org
> 
> --- Comment #1 from Laurent Montel <montel@kde.org> ---
> Oh thanks for provide an test account
> Send me all info in montel@kde.org
> i will investigate it.
> (give me all info how to configurate it thanks)

You may use 

AC is bug@spammy.de
PW is NtgrxPdrg2%

IMAP server: imap.strato.de
Sieve server: ruban.rzone.de

Please let me know when you have finished so I can delete this account.
Hopefully it will help.

Steffen
Comment 3 Laurent Montel 2015-07-03 21:25:40 UTC
Git commit 686a54f12f8d6845cfd9339dd72b580301251e29 by Montel Laurent.
Committed on 03/07/2015 at 21:25.
Pushed by mlaurent into branch 'master'.

Fix Bug 349852 - Sieve doesn't connect to Sieve server when using a Sieve server address different from IMAP server
FIXED-IN: 15.08

M  +4    -0    resources/imap/imapresource.kcfg
M  +21   -10   resources/imap/setupserver.cpp
M  +2    -0    resources/imap/setupserver.h
M  +107  -54   resources/imap/setupserverview_desktop.ui

http://commits.kde.org/kdepim-runtime/686a54f12f8d6845cfd9339dd72b580301251e29
Comment 4 Laurent Montel 2015-07-03 21:28:54 UTC
Git commit 330fceab94d2ee7d8b02b2a59f2141de263bafb9 by Montel Laurent.
Committed on 03/07/2015 at 21:26.
Pushed by mlaurent into branch 'master'.

Fix Bug 349852 - Sieve doesn't connect to Sieve server when using a Sieve server address different from IMAP server

A  +113  -0    libksieve/ksieveui/autocreatescripts/sieveactions/sieveactionereject.cpp     [License: GPL (v2)]
A  +45   -0    libksieve/ksieveui/autocreatescripts/sieveactions/sieveactionereject.h     [License: GPL (v2)]
M  +37   -8    libksieve/ksieveui/util/util.cpp
M  +7    -0    pimcommon/util/imapresource.kcfg

http://commits.kde.org/kdepim/330fceab94d2ee7d8b02b2a59f2141de263bafb9
Comment 5 Laurent Montel 2015-07-03 21:29:28 UTC
I can't put in 4.14 because we released last version and it added some translation string.