Fix Bug 349852 - Sieve doesn't connect to Sieve server when using a Sieve server address different from IMAP server

BUG: 349852
FIXED-IN: 15.08